--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <html>
 
   <head>
-    <titel>The Noter</titel>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Noties</title>
+
   </head>
   <body>
+    <!--add the following-->
+    <div class="flex column full-height">
+      <header>
+        <h1>Noties<h1>
+      </header>
+
+      <ul></ul>
+    </div>
+        <button>+</button>
+      <script src="assets/js/script.js"></script>
   </body>
 
 </html>
